syntax = "proto3";
package musechain.musecore.observer;

import "gogoproto/gogo.proto";
import "musechain/musecore/observer/confirmation_params.proto";

option go_package = "github.com/RWAs-labs/muse/x/observer/types";

message ChainParamsList { repeated ChainParams chain_params = 1; }

message ChainParams {
  int64 chain_id = 11;
  // Deprecated(v28): use confirmation_params instead
  uint64 confirmation_count = 1 [ deprecated = true ];
  uint64 gas_price_ticker = 2;
  uint64 inbound_ticker = 3;
  uint64 outbound_ticker = 4;
  uint64 watch_utxo_ticker = 5;
  string muse_token_contract_address = 8;
  string connector_contract_address = 9;
  string erc20_custody_contract_address = 10;
  int64 outbound_schedule_interval = 12;
  int64 outbound_schedule_lookahead = 13;
  string ballot_threshold = 14 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string min_observer_delegation = 15 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  bool is_supported = 16;
  string gateway_address = 17;

  // Advanced confirmation parameters for chain to support fast observation
  ConfirmationParams confirmation_params = 18;

  // Skip actions that require scanning the contents of each block.
  // The main thing this disables is transfers directly to the TSS address.
  bool disable_tss_block_scan = 19;
}

// Deprecated(v17)
message Params {
  // Deprecated(v17):Moved into the emissions module
  int64 ballot_maturity_blocks = 3;
}